# Netact-PM-Parser

./: Netact3GPP32435ContentHandler.py  README.md  main.py  measCollecFile.py  pyproject.toml
static/: measCollec.xsd
